--- a/index.html
+++ b/index.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
-    <script src="text/javascript" src="./skrollr.js"></script>
-    <script src="text/javascript">
-        var scroll = skrollr.init();
-    </script>
+    <link rel="stylesheet" href="style.css">    
     <title>Horizontal scrolling</title>
 </head>
 <body>
-    <div class="container" data-0="transform:translateX(0%)" data-100="transform:translateX(500%)">
+    <div class="container" data-0="transform:translateX(0%)" data-1000="transform:translateX(-400%)">
         <section>
             <div class="content">
                 <h2>Home</h2>
@@ -44,5 +40,9 @@
             </div>
         </section>
     </div> 
+    <script type="text/javascript" src="./skrollr.js"></script>
+    <script>
+        var scroll = skrollr.init();
+    </script>
 </body>
 </html>
